python/test-data/testTypesCollections5.err
Traceback (most recent call last):
  File "test-data/testTypesCollections5.py", line 10, in <module>
    foo([lambda: 42])  # error
  File "test-data/testTypesCollections5.py", line 7, in foo
    res.append(f())
WyppTypeError: got value of wrong type
given:    42
expected: value of type str

context: foo(l: list[Callable[[], str]]) -> list[str]
                                  ^^^
declared at: test-data/testTypesCollections5.py:3
caused by: test-data/testTypesCollections5.py:10
  | foo([lambda: 42])  # error
